added first screen UI (search field and search button);

--- a/BooksSearchongDemo/BooksSearchongDemo/Base.lproj/Main.storyboard
+++ b/BooksSearchongDemo/BooksSearchongDemo/Base.lproj/Main.storyboard
@@ -1,24 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Search View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SearchViewController" customModule="BooksSearchongDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="due-Gf-Ayv">
+                                <rect key="frame" x="16" y="283.5" width="343" height="100"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Ky-rM-NxU">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="49"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QNq-IN-Kmh">
+                                        <rect key="frame" x="0.0" y="57" width="343" height="43"/>
+                                        <color key="backgroundColor" red="0.1179050878" green="0.27395355700000001" blue="0.77467614409999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Search">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="searchButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2AX-e4-bi5"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstItem="9Ky-rM-NxU" firstAttribute="height" secondItem="QNq-IN-Kmh" secondAttribute="height" multiplier="1.13333" id="8wN-zt-U1H"/>
+                                    <constraint firstItem="QNq-IN-Kmh" firstAttribute="centerX" secondItem="due-Gf-Ayv" secondAttribute="centerX" id="EY0-ks-pwq"/>
+                                    <constraint firstItem="9Ky-rM-NxU" firstAttribute="top" secondItem="due-Gf-Ayv" secondAttribute="top" id="gEL-ez-M1J"/>
+                                    <constraint firstItem="QNq-IN-Kmh" firstAttribute="leading" secondItem="due-Gf-Ayv" secondAttribute="leading" id="jQ5-Wi-Z2i"/>
+                                    <constraint firstItem="QNq-IN-Kmh" firstAttribute="trailing" secondItem="9Ky-rM-NxU" secondAttribute="trailing" id="kpX-ye-zlk"/>
+                                    <constraint firstAttribute="bottom" secondItem="QNq-IN-Kmh" secondAttribute="bottom" id="uHU-2S-MRR"/>
+                                    <constraint firstItem="QNq-IN-Kmh" firstAttribute="top" secondItem="9Ky-rM-NxU" secondAttribute="bottom" constant="8" id="vGL-dB-e2g"/>
+                                    <constraint firstAttribute="height" constant="100" id="xVp-vi-NSL"/>
+                                    <constraint firstItem="QNq-IN-Kmh" firstAttribute="leading" secondItem="9Ky-rM-NxU" secondAttribute="leading" id="xyE-cZ-Ams"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter a search word for starting" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NZw-CO-YM7">
+                                <rect key="frame" x="16" y="238.5" width="343" height="20"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="due-Gf-Ayv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="7E6-Ns-ALW"/>
+                            <constraint firstItem="due-Gf-Ayv" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="81e-zX-GVm"/>
+                            <constraint firstItem="due-Gf-Ayv" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="8Se-I9-ZJ1"/>
+                            <constraint firstItem="due-Gf-Ayv" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="YXk-iM-UcE"/>
+                            <constraint firstItem="NZw-CO-YM7" firstAttribute="leading" secondItem="due-Gf-Ayv" secondAttribute="leading" id="gX3-vq-vyA"/>
+                            <constraint firstItem="due-Gf-Ayv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="idu-Qe-UBZ"/>
+                            <constraint firstItem="NZw-CO-YM7" firstAttribute="trailing" secondItem="due-Gf-Ayv" secondAttribute="trailing" id="naJ-aq-G03"/>
+                            <constraint firstItem="due-Gf-Ayv" firstAttribute="top" secondItem="NZw-CO-YM7" secondAttribute="bottom" constant="25" id="q4O-Gv-N7r"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="serchText" destination="9Ky-rM-NxU" id="92e-JZ-Wgc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="138.40000000000001" y="109.29535232383809"/>
         </scene>
     </scenes>
 </document>
